<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright © 2014 Elastic Path Software Inc. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * 
 * You may obtain a copy of the License at
 * http://www.apache.org/licenses/LICENSE-2.0
 * 
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
-->
<resources>

    <string name="app_name">elasticpath</string>
    <string name="action_settings">Settings</string>
    <string name="action_cart">Shopping Cart</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_login">LOGIN</string>
    <string name="action_profile">PROFILE</string>
    <string name="action_logout">LOGOUT</string>
    <string name="action_home">Home</string>
    <string name="msgErrorServer"> Server Error	</string>
    <string name="msgErrorNetworkUnavailable"> Network not available </string>
    <string name="msgErrorAuthentication"> Authentication failed </string>

    <!-- Login page strings -->
    <string name="hintUsername">Username</string>
    <string name="hintPassword">Password</string>
    <string name="labelButtonLogin">Login</string>
    <string name="labelButtonCreate">CREATE ACCOUNT</string>

    <!-- Strings for Product Lisitng page -->
    <string name="titlePageProductListings"></string>
    <string name="msgNoProductsPresent">No products listed under this category. Press back to select another category.</string>
    <string name="contentDesc">Product Description</string>
    <string name="labelNoProductTitle">No Title</string>
    <string name="labelProductNotAvailablle">OUT OF STOCK</string>
    <string name="labelProductAvailablle">IN STOCK</string>
    <string name="labelProductNoPrice">N/A</string>
    <string name="labelButtonAddtocart">Add to Cart</string>

    <!-- Strings for Product Details page -->
    <string name="titlePageProductDetails"></string>
    <string name="labelProductNoDescription">Product Description</string>

    <!-- Strings for Cart -->
    <string name="titlePageCart"></string>
    <string name="headingPageCart">Your Shopping Cart</string>
    <string name="labelTextViewShoppingCart">Shopping Cart: </string>
    <string name="prefixItems">Items</string>
    <string name="labelTextViewTotal">Total: </string>
    <string name="labelTextViewOrderSubtotal">Order Subtotal: </string>
    <string name="labelTextViewShippingTotal">Shipping Total: </string>
    <string name="labelTextViewTaxes">Taxes: </string>
    <string name="labelButtonUpdateCart">UPDATE CART</string>
    <string name="labelButtonCheckout">CHECKOUT</string>
    <string name="labelTextViewContinue">&lt;&lt;&#160;&#160;Continue Shopping\n</string>
    <string name="labelTextViewReturnListing">&lt;&lt;&#160;&#160;Return To Listing\n</string>
    <string name="labelTextViewReturnProfile">&lt;&lt;&#160;&#160;Return To User Profile\n</string>
    <string name="labelTextViewItems">Items</string>
    <string name="labelTextViewInStock">IN STOCK</string>
    <string name="labelTextViewShippingNotAvailable">Shipping: N/A</string>
    <string name="labelTextViewPrice">Price:\t</string>
    <string name="quantityNoItem">0 Items</string>
    <string name="priceNoItem">$ 0.00</string>
    <string name="priceNotAvailable">N/A</string>
    <string name="messageEmptyCart">Your shopping cart is empty.</string>
    <string name="messageDeleteCartSuccessful">Delete Successful.</string>
    <string name="labelTextViewQty">QTY</string>
    <string name="buttonCartPurchase">Purchase</string>
    <string name="buttonCartCheckout">CHECKOUT</string>
    <string name="buttonCartUpdateCart">UPDATE CART</string>
    <string name="buttonCartReturnCart">RETURN TO CART</string>
    <string name="buttonCartCompletePurchase">COMPLETE PURCHASE</string>
    <string name="buttonCartRemove">Remove</string>
    <string name="headingPagePurchase">Order Confirmation</string>
    <string name="labelTextViewCheckoutSummary">Checkout Summary</string>
    <string name="messageTextViewCheckoutSummary">View and confirm your order details.\n\nPlease select your shipping and billing preferences below before proceeding to
the checkout to complete your purchase.</string>
    <string name="labelTextViewAddress">Addresses</string>
    <string name="labelTextViewPaymentMethods">Payment Methods</string>
    <string name="labelTextViewShippingOptions">Shipping Options</string>
    <string name="labelTextViewPurchaseHitory">Purchase History</string>
    <string name="labelTextViewTotalQuantity">TOTAL QUANTITY</string>
    <string name="labelTextViewSubtotal">ORDER SUBTOTAL</string>
    <string name="labelTextViewShippingtotal">SHIPPING TOTAL</string>
    <string name="labelTextViewOrderTotal">ORDER TOTAL</string>
    <string name="labelRadioButtonUseForShipping">USE FOR SHIPPING</string>
    <string name="labelRadioButtonUseForBilling">USE FOR BILLING</string>
    <string name="labelRadioButtonUseCreditCard">USE THIS CREDIT CARD</string>
    <string name="labelTextViewOrderNumber">Order: </string>
    <string name="labelTextViewAddNewAddress">ADD NEW ADDRESS</string>
    <string name="labelTextViewOrderStatus">Status: </string>
    <string name="labelTextViewBillingInfo">Billing Information</string>
    <string name="labelTextViewAddressHeader">ADDRESS</string>
    <string name="labelTextViewPaymentHeader">PAYMENT</string>
    <string name="labelTextViewOrderContent">Order Contents</string>
    <string name="labelTextViewOrderTax">Order Tax:</string>
    <string name="labelTextViewOrderShipping">Order Shipping:</string>
    <string name="labelTextViewOrderTotalSmall">Order Total:</string>
    <string name="labelTextViewUserProfile">User Profile:</string>
    <string name="messageTextViewUserProfile">View your personal information and edit your shipping/billing addresses.</string>
    <string name="labelTextViewProfileName">NAME</string>
    <string name="labelTextViewProfileEmail">EMAIL/USERNAME</string>
    <string name="buttonAddressRemove">REMOVE</string>
    <string name="buttonAddressEdit">EDIT</string>
    <string name="labelTextViewOrderNumberHeader">Order #</string>
    <string name="labelTextViewDateHeader">Date</string>
    <string name="labelTextViewTotalHeader">Total</string>
    <string name="labelTextViewStatusHeader">Status</string>
    <string name="labelTextViewAddEditAddressHeader">Add/Edit Address</string>
    <string name="messageTextViewAddEditAddressHeader">Please login with your username and password below.</string>
    <string name="labelTextViewFirstName">FIRST NAME</string>
    <string name="labelTextViewLastName">LAST NAME</string>
    <string name="labelTextViewStreetAddress">STREET ADDRESS</string>
    <string name="labelTextViewExtendedAddress">EXTENDED ADDRESS</string>
    <string name="labelTextViewCity">CITY</string>
    <string name="labelTextViewProvince">PROVINCE</string>
    <string name="labelTextViewCountry">COUNTRY</string>
    <string name="labelTextViewPostalCode">POSTAL CODE</string>
    <string name="labelButtonCancel">CANCEL</string>
    <string name="labelButtonLogout">LOG OUT</string>
    <string name="labelButtonSave">SAVE</string>
    <string name="labelTextViewUserName">EMAIL/USERNAME</string>
    <string name="labelTextViewPassword">PASSWORD</string>
    <string name="labelTextViewLoginHeader">Account Login</string>
    <string name="messageTextViewLoginHeader">Please login with your username and password below.</string>
    <string name="labelTextViewRegisterHeader">Don\'t Have An Account?</string>
    <string name="messageTextViewRegisterHeader">Please enter your personal information to create a new user account.</string>
    <string name="labelTextViewUserLogout">User Logout</string>
    <string name="messageTextViewUserLogout">Are you sure you want to log out of this storefront?</string>
    <string name="breadcrumb_title_home">Home</string>
    <string name="ellipsis">…</string>
    <string name="lableNoPaymentMethod">You have no saved Payment methods.</string>
    <string name="messageLoading">Loading…</string>
    <string name="messageEnterAllFields">Please enter all the fields.</string>
    <string name="messagePasswordLength">Password must be at least 8 characters.</string>

</resources>