<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:scrollbars="vertical" >

    <RelativeLayout
        android:id="@+id/rlCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:visibility="visible" >

        <TextView
            android:id="@+id/tvHeaderTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="left"
            android:paddingBottom="0dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:text="@string/labelTextViewCheckoutSummary"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/tc_textView_cart_header_black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvHeaderSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvHeaderTitle"
            android:gravity="left"
            android:paddingBottom="0dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="0dp"
            android:text="@string/messageTextViewCheckoutSummary"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/tc_textView_cart_header_grey" />

        <FrameLayout
            android:id="@+id/frame_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvHeaderSummary"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp" />

        <FrameLayout
            android:id="@+id/frame_payment_methods"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/frame_address"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp" />

        <LinearLayout
            android:id="@+id/llShippingOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/frame_payment_methods"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:background="@drawable/layout_bg_border_blue_top_bottom" >

            <FrameLayout
                android:id="@+id/frame_shipping_options"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:paddingBottom="0dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="7dp"
                    android:text="@string/labelTextViewTotalQuantity"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/tc_textView_cart_header_dark_grey" />

                <TextView
                    android:id="@+id/tvQuantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:paddingBottom="0dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="2dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/tc_textView_cart_header_grey" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:paddingBottom="0dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="7dp"
                    android:text="@string/labelTextViewSubtotal"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/tc_textView_cart_header_dark_grey" />

                <TextView
                    android:id="@+id/tvOrderSubtotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:paddingBottom="0dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="2dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/tc_textView_cart_header_grey" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:paddingBottom="0dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="7dp"
                    android:text="@string/labelTextViewShippingtotal"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/tc_textView_cart_header_dark_grey" />

                <TextView
                    android:id="@+id/tvShippingTotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:paddingBottom="0dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="2dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/tc_textView_cart_header_grey" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:paddingBottom="0dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="7dp"
                    android:text="@string/labelTextViewOrderTotal"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/tc_textView_cart_header_dark_grey" />

                <TextView
                    android:id="@+id/tvOrderTotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:paddingBottom="0dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="2dp"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/tc_textView_cart_header_black" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llShippingOptions"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btReturnCart"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/apptheme_btn_default"
                android:padding="5dp"
                android:text="@string/buttonCartReturnCart"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/tc_textview_product_available"
                android:textStyle="bold"
                android:visibility="visible" />

            <Button
                android:id="@+id/btCompletePurchase"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/apptheme_btn_default"
                android:padding="5dp"
                android:text="@string/buttonCartCompletePurchase"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/tc_textview_product_available"
                android:textStyle="bold"
                android:visibility="visible" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>