<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:scrollbars="vertical" >

    <RelativeLayout
        android:id="@+id/rLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:visibility="visible" >

        <LinearLayout
            android:id="@+id/lHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="2"
                    android:gravity="left"
                    android:text="@string/labelTextViewUserProfile"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/tc_textView_cart_header_grey" />

                <TextView
                    android:id="@+id/tvUserName"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_weight="3"
                    android:gravity="left"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/tc_textView_cart_header_black" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="2dp"
                android:gravity="left"
                android:text="@string/messageTextViewUserProfile"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/tc_textView_cart_header_grey" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:text="@string/labelTextViewProfileName"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/tc_textView_cart_header_black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvUserFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="2dp"
                android:gravity="left"
                android:text="@string/labelTextViewProfileName"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/tc_textView_cart_header_black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:text="@string/labelTextViewProfileEmail"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/tc_textView_cart_header_black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="2dp"
                android:gravity="left"
                android:text="@string/labelTextViewProfileEmail"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/tc_textView_cart_header_black" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/frame_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lHeader"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp" />

        <FrameLayout
            android:id="@+id/frame_payment_methods"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/frame_address"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp" />
        
        <FrameLayout
            android:id="@+id/frame_purchases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/frame_payment_methods"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp" />      
            
        <TextView
            android:id="@+id/tvEmptyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/frame_purchases"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp" 
            android:text=" "/>
        
    </RelativeLayout>

</ScrollView>